--- a/AbkarFE/src/style/login-signup/_login.scss
+++ b/AbkarFE/src/style/login-signup/_login.scss
@@ -1,3 +1,148 @@
 .LogIn {
   text-align: center;
+  padding-top: 46px;
+
+  .title {
+    color: #fff;
+    text-align: center;
+    text-shadow: 0px 4px 0px #000;
+    -webkit-text-stroke-width: 2;
+    -webkit-text-stroke-color: #000;
+    font-family: AA-GALAXY;
+    font-size: 60px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 22px;
+    letter-spacing: -0.408px;
+  }
+
+  .shape {
+    position: relative;
+    margin-top: 45px;
+
+    img {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+
+  form {
+    input {
+      width: 80%;
+      text-align: right;
+      font-family: "Omnes Arabic";
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 22px;
+      letter-spacing: -0.408px;
+      background: var(--Background, #fffaed);
+      margin: 10px 0;
+      border-bottom: 1px solid black;
+      border-top: none;
+      border-left: none;
+      border-right: none;
+
+      &:placeholder-shown {
+        color: var(--Gray-mid, #888);
+      }
+
+      &:focus {
+        border-bottom: 1px solid black !important;
+        border-top: none !important;
+        border-left: none !important;
+        border-right: none !important;
+      }
+    }
+  }
+
+  .password {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    .forget {
+      text-align: left;
+      width: 80%;
+      margin-bottom: 10px;
+
+      button {
+        color: var(--Red, #f9295a);
+        font-family: "Omnes Arabic";
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 22px; /* 110% */
+        letter-spacing: -0.408px;
+        border: none;
+        background-color: transparent;
+      }
+    }
+  }
+
+  .another {
+    color: #fff;
+    text-align: center;
+    text-shadow: 0px 2px 0px #000;
+    -webkit-text-stroke-width: 1;
+    -webkit-text-stroke-color: #000;
+    font-family: "Omnes Arabic";
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 22px;
+    letter-spacing: -0.408px;
+    margin-top: 14px;
+
+    button {
+      border: none;
+      background-color: transparent;
+      color: var(--Green, #1fcc7b);
+    }
+  }
+
+  .or {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-top: 30px;
+    position: relative;
+
+    .line {
+      height: 1px;
+      width: 70%;
+      background-color: black;
+    }
+
+    span {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: var(--Gray-mid, #888);
+      text-align: center;
+      font-family: "Omnes Arabic";
+      font-size: 20px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 22px;
+      letter-spacing: -0.408px;
+      background-color: var(--window-background);
+      width: 184px;
+    }
+  }
+
+  .btns {
+    display: flex;
+    justify-content: center;
+    margin-top: 22px;
+    gap: 10px;
+
+    img {
+      margin-right: 4px;
+    }
+  }
 }
