--- a/AbkarFE/src/style/login-signup/main.css
+++ b/AbkarFE/src/style/login-signup/main.css
@@ -6,10 +6,20 @@
 :root {
   --background-color: #00dcea;
   --window-background: #fffaed;
-  --header-color: #FFD200;
-
 }
 
+@font-face {
+  font-family: "Ala Typoo Medium";
+  src: url("../../assets/AlaTypoo-Medium.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Omnes Arabic";
+  src: url("../../assets/OMNES-ARABIC-REGULAR.ttf") format("truetype");
+}
+@font-face {
+  font-family: "AA-GALAXY";
+  src: url("../../assets/AA-GALAXY.otf") format("truetype");
+}
 .PreLoader {
   display: flex;
   justify-content: center;
@@ -18,7 +28,25 @@
   animation: fade-out 2s forwards;
   animation: color-change 2s forwards;
 }
-
+.PreLoader .logo {
+  position: relative;
+}
+.PreLoader .logo span {
+  position: absolute;
+  top: 14%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: var(--Yellow, #ffd200);
+  text-align: center;
+  text-shadow: 0px 4px 0px #000;
+  -webkit-text-stroke-color: #000;
+  font-family: "Ala Typoo Medium";
+  font-size: 200px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 22px;
+  letter-spacing: -0.408px;
+}
 @keyframes fade-out {
   0% {
     opacity: 1;
@@ -41,6 +69,7 @@
     background-color: var(--background-color);
   }
 }
+
 .Age {
   height: 100%;
 }
@@ -49,6 +78,21 @@
   justify-content: center;
   align-items: center;
   margin-top: 15px;
+  position: relative;
+}
+.Age__top p {
+  position: absolute;
+  color: #fff;
+  text-align: center;
+  text-shadow: 0px 4px 0px #000;
+  -webkit-text-stroke-width: 2;
+  -webkit-text-stroke-color: #000;
+  font-family: AA-GALAXY;
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 22px; /* 36.667% */
+  letter-spacing: -0.408px;
 }
 .Age__bottom {
   height: 40%;
@@ -79,6 +123,14 @@
   border-radius: 14px;
   border: 2px solid #000000;
   cursor: pointer;
+  color: #fff;
+  text-align: center;
+  font-family: "Omnes Arabic";
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 22px; /* 55% */
+  letter-spacing: -0.408px;
 }
 
 .GreenBtn {
@@ -89,25 +141,195 @@
   background-color: #f9295a;
 }
 
+.long {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 14px;
+  border: 2px solid #000;
+  background: var(--Green, #1fcc7b);
+  box-shadow: 0px 4px 0px 0px #000;
+  color: #fff;
+  text-align: center;
+  font-family: "Omnes Arabic";
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 22px;
+  letter-spacing: -0.408px;
+  width: 490px;
+  height: 48px;
+  flex-shrink: 0;
+}
+
 .Teen {
   text-align: center;
+  padding-top: 46px;
 }
-.Teen > img {
-  margin-top: 50px;
+.Teen .title {
+  color: #fff;
+  text-align: center;
+  text-shadow: 0px 4px 0px #000;
+  -webkit-text-stroke-color: #000;
+  font-family: AA-GALAXY;
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 22px;
+  letter-spacing: -0.408px;
 }
 .Teen__shape {
+  margin-top: 65px;
   position: relative;
 }
-.Teen__shape img:last-of-type {
+.Teen__shape img {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.Teen .text {
-  margin-bottom: 40px;
+.Teen p {
+  color: #000;
+  text-align: center;
+  font-family: "Omnes Arabic";
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 32px;
+  letter-spacing: -0.408px;
+  margin: 46px 0;
 }
 
 .LogIn {
   text-align: center;
+  padding-top: 46px;
+}
+.LogIn .title {
+  color: #fff;
+  text-align: center;
+  text-shadow: 0px 4px 0px #000;
+  -webkit-text-stroke-width: 2;
+  -webkit-text-stroke-color: #000;
+  font-family: AA-GALAXY;
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 22px;
+  letter-spacing: -0.408px;
+}
+.LogIn .shape {
+  position: relative;
+  margin-top: 45px;
+}
+.LogIn .shape img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.LogIn form input {
+  width: 80%;
+  text-align: right;
+  font-family: "Omnes Arabic";
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 22px;
+  letter-spacing: -0.408px;
+  background: var(--Background, #fffaed);
+  margin: 10px 0;
+  border-bottom: 1px solid black;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+}
+.LogIn form input:-moz-placeholder-shown {
+  color: var(--Gray-mid, #888);
+}
+.LogIn form input:placeholder-shown {
+  color: var(--Gray-mid, #888);
+}
+.LogIn form input:focus {
+  border-bottom: 1px solid black !important;
+  border-top: none !important;
+  border-left: none !important;
+  border-right: none !important;
+}
+.LogIn .password {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.LogIn .password .forget {
+  text-align: left;
+  width: 80%;
+  margin-bottom: 10px;
+}
+.LogIn .password .forget button {
+  color: var(--Red, #f9295a);
+  font-family: "Omnes Arabic";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 22px; /* 110% */
+  letter-spacing: -0.408px;
+  border: none;
+  background-color: transparent;
+}
+.LogIn .another {
+  color: #fff;
+  text-align: center;
+  text-shadow: 0px 2px 0px #000;
+  -webkit-text-stroke-width: 1;
+  -webkit-text-stroke-color: #000;
+  font-family: "Omnes Arabic";
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 22px;
+  letter-spacing: -0.408px;
+  margin-top: 14px;
+}
+.LogIn .another button {
+  border: none;
+  background-color: transparent;
+  color: var(--Green, #1fcc7b);
+}
+.LogIn .or {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-top: 30px;
+  position: relative;
+}
+.LogIn .or .line {
+  height: 1px;
+  width: 70%;
+  background-color: black;
+}
+.LogIn .or span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: var(--Gray-mid, #888);
+  text-align: center;
+  font-family: "Omnes Arabic";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 22px;
+  letter-spacing: -0.408px;
+  background-color: var(--window-background);
+  width: 184px;
+}
+.LogIn .btns {
+  display: flex;
+  justify-content: center;
+  margin-top: 22px;
+  gap: 10px;
+}
+.LogIn .btns img {
+  margin-right: 4px;
 }/*# sourceMappingURL=main.css.map */
