--- a/AbkarFE/src/style/login-signup/main.scss
+++ b/AbkarFE/src/style/login-signup/main.scss
@@ -4,3 +4,9 @@
 @use "./btns";
 @use "./teen";
 @use "./login";
+@use "./forgot";
+@use "./check";
+@use "./reassign";
+@use "./parents";
+@use "./welcome";
+@use "./form";
