Finished the form

--- a/AbkarFE/src/style/login-signup/_teen.scss
+++ b/AbkarFE/src/style/login-signup/_teen.scss
@@ -13,6 +13,10 @@
     font-weight: 700;
     line-height: 22px;
     letter-spacing: -0.408px;
+
+    @media (max-width: 680px) {
+      font-size: 48px;
+    }
   }
 
   &__shape {
