--- a/AbkarFE/src/style/login-signup/_age.scss
+++ b/AbkarFE/src/style/login-signup/_age.scss
@@ -20,6 +20,10 @@
       font-weight: 700;
       line-height: 22px; /* 36.667% */
       letter-spacing: -0.408px;
+
+      @media (max-width: 680px) {
+        font-size: 48px;
+      }
     }
   }
 
