--- a/AbkarFE/src/style/login-signup/_parents.scss
+++ b/AbkarFE/src/style/login-signup/_parents.scss
@@ -22,6 +22,10 @@
       font-weight: 700;
       line-height: 88px;
       letter-spacing: -0.408px;
+
+      @media (max-width: 680px) {
+        font-size: 48px;
+      }
     }
   }
 
