--- a/AbkarFE/src/style/login-signup/_preloader.scss
+++ b/AbkarFE/src/style/login-signup/_preloader.scss
@@ -34,6 +34,12 @@
   .logo {
     position: relative;
 
+    img {
+      @media (max-width: 680px) {
+        display: none;
+      }
+    }
+
     span {
       position: absolute;
       top: 14%;
@@ -49,6 +55,10 @@
       font-weight: 700;
       line-height: 22px;
       letter-spacing: -0.408px;
+
+      @media (max-width: 680px) {
+        font-size: 128px;
+      }
     }
   }
 
@@ -75,4 +85,9 @@
       background-color: var(--background-color);
     }
   }
+}
+
+.fade-out {
+  opacity: 0;
+  transition: opacity 0.5s ease-out;
 }
