--- a/AbkarFE/src/style/login-signup/_parents.scss
+++ b/AbkarFE/src/style/login-signup/_parents.scss
@@ -48,4 +48,16 @@
       color: var(--Green, #1fcc7b);
     }
   }
+
+  .big {
+    @media (max-width: 680px) {
+      display: none;
+    }
+  }
+
+  .small {
+    @media (min-width: 680px) {
+      display: none;
+    }
+  }
 }
