--- a/AbkarFE/src/style/login-signup/_btns.scss
+++ b/AbkarFE/src/style/login-signup/_btns.scss
@@ -5,15 +5,15 @@
   border-radius: 14px;
   border: 2px solid #000000;
   cursor: pointer;
-
   color: #fff;
   text-align: center;
   font-family: "Omnes Arabic";
   font-size: 40px;
   font-style: normal;
   font-weight: 600;
-  line-height: 22px; /* 55% */
+  line-height: 22px;
   letter-spacing: -0.408px;
+  width: 216px;
 }
 
 .GreenBtn {
@@ -43,4 +43,8 @@
   width: 490px;
   height: 48px;
   flex-shrink: 0;
+
+  @media (max-width: 680px) {
+    width: 280px;
+  }
 }
