--- a/AbkarFE/src/style/login-signup/_form.scss
+++ b/AbkarFE/src/style/login-signup/_form.scss
@@ -67,6 +67,10 @@
     letter-spacing: -0.408px;
     margin-top: 14px;
 
+    @media (max-width: 680px) {
+      font-size: 20px;
+    }
+
     button {
       border: none;
       background-color: transparent;
@@ -102,6 +106,11 @@
       letter-spacing: -0.408px;
       background-color: var(--window-background);
       width: 184px;
+
+      @media (max-width: 680px) {
+        font-size: 16px;
+        width: 132px;
+      }
     }
   }
 
