The responsive is alomost done

--- a/AbkarFE/src/style/login-signup/_age.scss
+++ b/AbkarFE/src/style/login-signup/_age.scss
@@ -1,5 +1,11 @@
 .Age {
   height: 100%;
+
+  @media (max-width: 680px) {
+    height: 86%;
+    margin-top: 100px;
+  }
+
   &__top {
     display: flex;
     justify-content: center;
