--- a/AbkarFE/src/style/login-signup/_forgot.scss
+++ b/AbkarFE/src/style/login-signup/_forgot.scss
@@ -1,6 +1,13 @@
 .Forgot {
   padding-top: 46px;
 
+  height: 100%;
+
+  @media (max-width: 680px) {
+    height: 86%;
+    margin-top: 30px;
+  }
+
   .title {
     color: #fff;
     text-align: center;
@@ -95,5 +102,9 @@
       &:focus {
       }
     }
+  }
+
+  input:focus {
+    outline: none;
   }
 }
