--- a/AbkarFE/src/style/login-signup/_parents.scss
+++ b/AbkarFE/src/style/login-signup/_parents.scss
@@ -2,6 +2,11 @@
   text-align: center;
   padding-top: 46px;
 
+  @media (max-width: 680px) {
+    height: 86%;
+    margin-top: 100px;
+  }
+
   .shape {
     position: relative;
     margin-bottom: 20px;
