--- a/AbkarFE/src/style/login-signup/_teen.scss
+++ b/AbkarFE/src/style/login-signup/_teen.scss
@@ -2,6 +2,11 @@
   text-align: center;
   padding-top: 46px;
 
+  @media (max-width: 680px) {
+    height: 86%;
+    margin-top: 100px;
+  }
+
   .title {
     color: #fff;
     text-align: center;
