--- a/AbkarFE/src/style/login-signup/_wrapper.scss
+++ b/AbkarFE/src/style/login-signup/_wrapper.scss
@@ -12,7 +12,10 @@
     border-radius: 20px;
 
     @media (max-width: 680px) {
-      width: 320px;
+      width: 100%;
+      height: 100% !important;
+      border: none;
+      border-radius: 0;
     }
   }
 }
