--- a/AbkarFE/src/style/login-signup/main.css
+++ b/AbkarFE/src/style/login-signup/main.css
@@ -88,6 +88,12 @@
 .Age {
   height: 100%;
 }
+@media (max-width: 680px) {
+  .Age {
+    height: 86%;
+    margin-top: 100px;
+  }
+}
 .Age__top {
   display: flex;
   justify-content: center;
@@ -153,7 +159,10 @@
 }
 @media (max-width: 680px) {
   .Wrapper__window {
-    width: 320px;
+    width: 100%;
+    height: 100% !important;
+    border: none;
+    border-radius: 0;
   }
 }
 
@@ -172,7 +181,6 @@
   font-weight: 600;
   line-height: 22px;
   letter-spacing: -0.408px;
-  width: 216px;
 }
 
 .GreenBtn {
@@ -212,6 +220,12 @@
 .Teen {
   text-align: center;
   padding-top: 46px;
+}
+@media (max-width: 680px) {
+  .Teen {
+    height: 86%;
+    margin-top: 100px;
+  }
 }
 .Teen .title {
   color: #fff;
@@ -321,12 +335,6 @@
 .LogIn form input:placeholder-shown {
   color: var(--Gray-mid, #888);
 }
-.LogIn form input:focus {
-  border-bottom: 1px solid black !important;
-  border-top: none !important;
-  border-left: none !important;
-  border-right: none !important;
-}
 .LogIn .password {
   width: 100%;
   display: flex;
@@ -422,9 +430,19 @@
 .LogIn .btns img {
   margin-right: 4px;
 }
+.LogIn input:focus {
+  outline: none;
+}
 
 .Forgot {
   padding-top: 46px;
+  height: 100%;
+}
+@media (max-width: 680px) {
+  .Forgot {
+    height: 86%;
+    margin-top: 30px;
+  }
 }
 .Forgot .title {
   color: #fff;
@@ -516,8 +534,18 @@
   border-left: none !important;
   border-right: none !important;
 }
+.Forgot input:focus {
+  outline: none;
+}
+
 .Check {
   padding-top: 46px;
+}
+@media (max-width: 680px) {
+  .Check {
+    height: 86%;
+    margin-top: 30px;
+  }
 }
 .Check .title {
   color: #fff;
@@ -613,9 +641,19 @@
   border-left: none !important;
   border-right: none !important;
 }
+.Check input:focus {
+  outline: none;
+}
+
 .Reassign {
   padding-top: 46px;
   text-align: center;
+}
+@media (max-width: 680px) {
+  .Reassign {
+    height: 86%;
+    margin-top: 60px;
+  }
 }
 .Reassign .title {
   color: #fff;
@@ -678,10 +716,19 @@
 .Reassign form button {
   margin-top: 20px;
 }
+.Reassign input:focus {
+  outline: none;
+}
 
 .Parents {
   text-align: center;
   padding-top: 46px;
+}
+@media (max-width: 680px) {
+  .Parents {
+    height: 86%;
+    margin-top: 100px;
+  }
 }
 .Parents .shape {
   position: relative;
@@ -742,6 +789,11 @@
   direction: rtl;
   padding-top: 40px;
   text-align: center;
+}
+@media (max-width: 680px) {
+  .Welcome {
+    padding: 66px 16px 0;
+  }
 }
 .Welcome .title {
   color: #fff;
@@ -896,4 +948,7 @@
 }
 .FForm .btns img {
   margin-right: 4px;
+}
+.FForm input:focus {
+  outline: none;
 }/*# sourceMappingURL=main.css.map */
