--- a/AbkarFE/src/components/OnBoard/Course/Course.module.css
+++ b/AbkarFE/src/components/OnBoard/Course/Course.module.css
@@ -69,8 +69,9 @@
     text-align: center;
     color: #fff;
     text-shadow: -3px 4px 0px #000, -3px 1px 0px #000;
-
-
+    /* -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: black; */
+  
 }
 
 @media only screen and (max-width: 900px) {
@@ -93,8 +94,68 @@
         overflow-x: hidden;
     }
 }
+@media screen and (max-width: 440px) {
+    .computer{
+        font-size: 35px;
+    }
+}
 
 /* /////////////////////////////////////////////////////////////////////////////////////////////// */
+
+
+.couresConatinar {
+    direction: rtl;
+}
+
+.progress {
+    margin-top: 220px;
+    position: relative;
+    width: 100%;
+    height: 40px;
+    border-radius: 20px;
+    border: 2px;
+    background: linear-gradient(0deg, #00DCEA, #00DCEA),
+        linear-gradient(0deg, #000000, #000000);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0px 4px 0px 0px rgba(0, 0, 0, 1);
+    border: 2px solid rgba(0, 0, 0, 1)
+}
+
+.skillProgress {
+    width: 23px;
+    height: 36px;
+    top: 2px;
+    border-radius: 4px 20px 20px 4px;
+    background: rgba(249, 41, 90, 1);
+
+
+}
+.progressContent{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    /* background-color: #1FCC7B; */
+    border-radius: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px;
+}
+.progressPragraph{
+font-family: "Omnes Arabic";
+font-size: 24px;
+font-weight: 600;
+line-height: 26px;
+letter-spacing: -0.40799999237060547px;
+text-align: right;
+padding-top: 15px;
+color: rgba(255, 255, 255, 1);
+
+}
 
 .videoParagraph {
     font-family: "Omnes Arabic";
@@ -126,7 +187,7 @@
     background-color: var(--Yellow, #FFD200);
     position: absolute;
     top: -16px;
-    left: 380px;
+    right: -10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -143,20 +204,36 @@
 .note {
     background: linear-gradient(0deg, #F9295A, #F9295A),
         linear-gradient(0deg, #000000, #000000);
-        text-align: center;
-        box-shadow: 0px 4px 0px 0px rgba(0, 0, 0, 1);
-        border: 2px solid #000;
-        height: 60px;
-        
+    text-align: center;
+    box-shadow: 0px 4px 0px 0px rgba(0, 0, 0, 1);
+    border: 2px solid #000;
+    height: 60px;
+
 
 }
-.noteParagraph{
-font-family: "Omnes Arabic";
-font-size: 20px;
+
+.noteParagraph {
+    font-family: "Omnes Arabic";
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 26px;
+    letter-spacing: -0.40799999237060547px;
+    text-align: center;
+    color: rgba(255, 255, 255, 1);
+
+}
+.iconContent{
+    position: relative;
+    background-color: #FFD200;
+    border: 2px solid #000;
+    box-shadow: 0px 4px 0px 0px rgba(0, 0, 0, 1);
+    cursor: pointer;
+}
+.iconParagraph{
+ font-family: "Omnes Arabic";
+font-size: 50px;
 font-weight: 600;
 line-height: 26px;
 letter-spacing: -0.40799999237060547px;
 text-align: center;
-color: rgba(255, 255, 255, 1);
-
 }
