--- a/AbkarFE/src/style/login-signup/_wrapper.scss
+++ b/AbkarFE/src/style/login-signup/_wrapper.scss
@@ -5,6 +5,10 @@
   align-items: center;
   height: 100vh;
 
+  @media (max-width: 680px) {
+    background-color: var(--window-background);
+  }
+
   &__window {
     border: 4px solid #000000;
     background-color: var(--window-background);
