--- a/AbkarFE/src/components/OnBoard/Course/Course.module.css
+++ b/AbkarFE/src/components/OnBoard/Course/Course.module.css
@@ -32,6 +32,9 @@
     /* 162.5% */
     letter-spacing: -0.408px;
 }
+.pointerIcon{
+    cursor: pointer;
+}
 
 .editIcon3bkr {
     position: absolute;
@@ -65,12 +68,15 @@
     font-size: 60px;
     font-weight: 700;
     line-height: 22px;
-    letter-spacing: -0.40799999237060547px;
+    letter-spacing: -0.4px;
     text-align: center;
     color: #fff;
-    text-shadow: -3px 4px 0px #000, -3px 1px 0px #000;
-    /* -webkit-text-stroke-width: 2px;
-  -webkit-text-stroke-color: black; */
+    /* text-shadow: -3px 4px 0px #000, -3px 1px 0px #000; */
+    -webkit-text-stroke-width: 1.5px;
+  -webkit-text-stroke-color: rgba(0, 0, 0, 1);
+  text-shadow: 0px 4px 0px  rgba(0, 0, 0, 1);
+  
+
   
 }
 
@@ -97,6 +103,13 @@
 @media screen and (max-width: 440px) {
     .computer{
         font-size: 35px;
+    }
+    .editIconP{
+        font-size: 14px;
+    }
+    .computerIcon{
+        width: 30px !important;
+        margin-left: 10px;
     }
 }
 
