--- a/AbkarFE/src/style/login-signup/_wrapper.scss
+++ b/AbkarFE/src/style/login-signup/_wrapper.scss
@@ -18,7 +18,7 @@
 
     @media (max-width: 680px) {
       width: 100%;
-      height: 100% !important;
+      height: 100%;
       border: none;
       border-radius: 0;
     }
