--- a/AbkarFE/src/style/login-signup/main.css
+++ b/AbkarFE/src/style/login-signup/main.css
@@ -2,7 +2,9 @@
   box-sizing: border-box;
   margin: 0;
 }
-
+body{
+  overflow-x: hidden !important;
+}
 :root {
   --background-color: #00dcea;
   --window-background: #fffaed;
